[tool.poetry]
name = "cse493g1-project"
version = "0.1.0"
description = ""
authors = ["Jayden Edara <aedara@uw.edu>"]
readme = "README.md"
packages = [{include = "cse493g1_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
playwright = "^1.39.0"
asyncio = "^3.4.3"
playwright-stealth = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
